# frc-api

./: Cargo.toml  README.md  build.rs
src/: error.rs  frc.rs  lib.rs  main.rs
src/frc/: alliance.rs  avatar.rs  event.rs  schedule.rs  team.rs
