[package]
name = "frc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.16.0"
dotenvy = "0.15.7"
futures = "0.3.28"
lazy_static = "1.4.0"
redis = "0.23.0"
reqwest = { version="0.11.17", features=["json"] }
serde = { version="1.0.163", features=["derive"] }
tokio = { version="1.28.1", features=["full"] }
tokio-stream = "0.1.14"

[build-dependencies]
reqwest = { version="0.11.17", features=["json", "blocking"] }
serde = { version="1.0.163", features=["derive"] }
dotenvy = "0.15.7"
